# crystalchat

./: .gitignore  .gitpod.yml  README.md  build.bat  build.sh  crystalchat.py  crystalcommon.py  installer.py  launcher.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: pythonapp.yml
autoupdate/: readme.md  version  versions
