[tool.poetry]
name = "crystalchat"
version = "0.1.0"
description = "A chat program"
authors = ["webmsgr <zapcontact000@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
prompt_toolkit = "^3.0.3"
click = "^7.0"
websockets = "^8.0"
rsa = "^4.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
